[gd_scene load_steps=33 format=3 uid="uid://cqlk67afqkh0n"]

[ext_resource type="Script" path="res://scripts/orb.gd" id="1_3n0ny"]
[ext_resource type="Texture2D" uid="uid://b55raupurhtcy" path="res://regular_nonelem.png" id="2_5hmbr"]
[ext_resource type="Texture2D" uid="uid://c1y40sm7netx7" path="res://regular_air.png" id="3_2lkbf"]
[ext_resource type="Texture2D" uid="uid://ciyxuk6576pdm" path="res://radial_element_normal.png" id="3_x23px"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_coming_back.gd" id="4_ba7af"]
[ext_resource type="Texture2D" uid="uid://ojfvu5nxjt4w" path="res://regular_crystal.png" id="4_e0x8t"]
[ext_resource type="Texture2D" uid="uid://c1wjoshxe0qq" path="res://radial_elemnt_hover.png" id="4_jqyif"]
[ext_resource type="Texture2D" uid="uid://lwprwdk6gged" path="res://regular_fire.png" id="5_2ecuh"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_orbiting.gd" id="5_bt6np"]
[ext_resource type="Texture2D" uid="uid://4ioyst2om2r5" path="res://regular_water.png" id="6_50psp"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_into_hands.gd" id="6_ctjo4"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_in_hands.gd" id="7_ybmvb"]
[ext_resource type="Texture2D" uid="uid://c5jrukbiglbtf" path="res://expanded_nonelem.png" id="7_yy7wu"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_held.gd" id="8_essj1"]
[ext_resource type="Texture2D" uid="uid://dx05xwe1d2ohu" path="res://expanded_air.png" id="8_ytucg"]
[ext_resource type="Texture2D" uid="uid://b1qgo4qy6l7r7" path="res://expanded_crystal.png" id="9_x8h7r"]
[ext_resource type="Texture2D" uid="uid://c163i6sxuujdt" path="res://expanded_fire.png" id="10_coaqs"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_expanded.gd" id="11_edvbk"]
[ext_resource type="Texture2D" uid="uid://dw0xy5osvtx02" path="res://expanded_water.png" id="11_pc4yy"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_hugged.gd" id="11_se0va"]
[ext_resource type="Script" path="res://scripts/orb_scripts/orb_rc.gd" id="13_jsftn"]
[ext_resource type="Script" path="res://scripts/orb_scripts/elements_fsm.gd" id="14_mrm75"]
[ext_resource type="Script" path="res://scripts/orb_scripts/element_none.gd" id="15_q2n1s"]
[ext_resource type="Script" path="res://scripts/orb_scripts/element_water.gd" id="16_nkaun"]
[ext_resource type="Script" path="res://scripts/orb_scripts/element_air.gd" id="17_eip6x"]
[ext_resource type="Script" path="res://scripts/orb_scripts/element_crystal.gd" id="18_dgyq5"]
[ext_resource type="Script" path="res://scripts/orb_scripts/element_fire.gd" id="19_10dvh"]
[ext_resource type="PackedScene" uid="uid://bqo7pprrdbpe5" path="res://scenes/fire_source_ring.tscn" id="28_fnawg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nvj7l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5hmbr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2lkbf")
}],
"loop": true,
"name": &"default_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_e0x8t")
}],
"loop": true,
"name": &"default_crystal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2ecuh")
}],
"loop": true,
"name": &"default_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_50psp")
}],
"loop": true,
"name": &"default_water",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_yy7wu")
}],
"loop": true,
"name": &"expanded",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ytucg")
}],
"loop": true,
"name": &"expanded_air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_x8h7r")
}],
"loop": true,
"name": &"expanded_crystal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_coaqs")
}],
"loop": true,
"name": &"expanded_fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_pc4yy")
}],
"loop": true,
"name": &"expanded_water",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ja3v"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aqmg6"]
radius = 32.0

[sub_resource type="GDScript" id="GDScript_jonhu"]
script/source = "extends Node

@export var initial_state: State

var current_state: State
var states: Dictionary = {}


func _ready():
	for child in get_children():
		if child is State:
			states[child.name.to_lower()] = child
			child.transitioned.connect(_on_child_transition)
	if initial_state:
		initial_state.enter()
		current_state = initial_state


func _process(delta):
	if current_state:
		current_state.update(delta)


func _physics_process(delta):
	if current_state:
		current_state.physics_update(delta)


func _on_child_transition(state, new_state_name):
	if state != current_state:
		return
	var new_state = states.get(new_state_name.to_lower())
	if !new_state:
		return
	if current_state:
		current_state.exit()
	new_state.enter()
	current_state = new_state
"

[node name="Orb" type="CharacterBody2D" groups=["orb"]]
collision_layer = 4
collision_mask = 17
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_3n0ny")

[node name="FireSourceRing" parent="." instance=ExtResource("28_fnawg")]
radius = 30.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nvj7l")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_7ja3v")

[node name="ExpandedColllisionShape" type="CollisionShape2D" parent="HurtBox"]
visible = false
shape = SubResource("CircleShape2D_aqmg6")
disabled = true

[node name="MainShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7ja3v")

[node name="RadialMenu" type="Control" parent="."]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="TextureButton0" type="TextureButton" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../TextureButton")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath("../TextureButton3")
focus_neighbor_bottom = NodePath("../TextureButton4")
mouse_filter = 2
button_mask = 0

[node name="TextureButton" type="TextureButton" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -24.0
offset_right = -13.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath("../TextureButton3")
focus_neighbor_bottom = NodePath("../TextureButton4")
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("3_x23px")
texture_pressed = ExtResource("4_jqyif")
texture_focused = ExtResource("4_jqyif")

[node name="TextureButton2" type="TextureButton" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -50.0
offset_right = 13.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
pivot_offset = Vector2(13, 24)
focus_neighbor_left = NodePath("../TextureButton")
focus_neighbor_right = NodePath("../TextureButton3")
focus_neighbor_bottom = NodePath("../TextureButton4")
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("3_x23px")
texture_pressed = ExtResource("4_jqyif")
texture_focused = ExtResource("4_jqyif")

[node name="TextureButton3" type="TextureButton" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -24.0
offset_right = 39.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
pivot_offset = Vector2(13, 24)
focus_neighbor_left = NodePath("../TextureButton")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_bottom = NodePath("../TextureButton4")
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("3_x23px")
texture_pressed = ExtResource("4_jqyif")
texture_focused = ExtResource("4_jqyif")

[node name="TextureButton4" type="TextureButton" parent="RadialMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = 2.0
offset_right = 13.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
pivot_offset = Vector2(13, 24)
focus_neighbor_left = NodePath("../TextureButton")
focus_neighbor_top = NodePath("../TextureButton2")
focus_neighbor_right = NodePath("../TextureButton3")
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("3_x23px")
texture_pressed = ExtResource("4_jqyif")
texture_focused = ExtResource("4_jqyif")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = SubResource("GDScript_jonhu")
initial_state = NodePath("OrbComingBack")

[node name="OrbComingBack" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("4_ba7af")
orb = NodePath("../..")

[node name="OrbOrbiting" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("5_bt6np")
orb = NodePath("../..")

[node name="OrbIntoHands" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("6_ctjo4")
orb = NodePath("../..")

[node name="OrbInHands" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("7_ybmvb")
orb = NodePath("../..")

[node name="OrbHeld" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("8_essj1")
orb = NodePath("../..")

[node name="OrbExpanded" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("11_edvbk")
orb = NodePath("../..")

[node name="OrbRC" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("13_jsftn")
orb = NodePath("../..")

[node name="OrbHugged" type="Node" parent="FSM" node_paths=PackedStringArray("orb")]
script = ExtResource("11_se0va")
orb = NodePath("../..")

[node name="ElementsFSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("14_mrm75")
initial_state = NodePath("ElementNone")

[node name="ElementNone" type="Node" parent="ElementsFSM" node_paths=PackedStringArray("orb")]
script = ExtResource("15_q2n1s")
orb = NodePath("../..")

[node name="ElementWater" type="Node" parent="ElementsFSM" node_paths=PackedStringArray("orb")]
script = ExtResource("16_nkaun")
orb = NodePath("../..")

[node name="ElementAir" type="Node" parent="ElementsFSM" node_paths=PackedStringArray("orb")]
script = ExtResource("17_eip6x")
orb = NodePath("../..")

[node name="ElementCrystal" type="Node" parent="ElementsFSM" node_paths=PackedStringArray("orb")]
script = ExtResource("18_dgyq5")
orb = NodePath("../..")

[node name="ElementFire" type="Node" parent="ElementsFSM" node_paths=PackedStringArray("orb")]
script = ExtResource("19_10dvh")
orb = NodePath("../..")

[connection signal="area_entered" from="HurtBox" to="ElementsFSM/ElementNone" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="ElementsFSM/ElementWater" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="ElementsFSM/ElementAir" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="ElementsFSM/ElementCrystal" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="HurtBox" to="ElementsFSM/ElementFire" method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="ElementsFSM/ElementWater" method="_on_hurt_box_area_exited"]
[connection signal="area_exited" from="HurtBox" to="ElementsFSM/ElementAir" method="_on_hurt_box_area_exited"]
[connection signal="area_exited" from="HurtBox" to="ElementsFSM/ElementCrystal" method="_on_hurt_box_area_exited"]
[connection signal="area_exited" from="HurtBox" to="ElementsFSM/ElementFire" method="_on_hurt_box_area_exited"]
